k8s-specifications/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  type: NodePort
  ports:
  - name: "nginx-service"
    port: 8080
    targetPort: 80
    nodePort: 31000
  selector:
    app: nginx
