k8s-specifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: site.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "nginx"
              port:
                number: 80
